--- a/skt.html
+++ b/skt.html
@@ -11,6 +11,7 @@
     first number:<input type ="number" id="f"/>
     second number:<input type="number" id="s"/>
         <input type="submit" name="submit" onclick="product()">
+        hello
 </form>
 
 </body>
